--- a/OFFERS-313/ru/index.html
+++ b/OFFERS-313/ru/index.html
@@ -60,22 +60,31 @@
     <div class="content">
       <div class="top">
         <div class="top__left">
-          <img src="img/comment.svg" alt="">
+          <a href=""><img src="img/comment.svg" alt=""></a>
 
-          <p class="top__box">
-            дети
-          </p>
-          <p class="top__box">
-            игрушки
-          </p>
-          <p class="top__box">
-            советы
-          </p>
+          <a href="">
+            <p class="top__box">
+              дети
+            </p>
+          </a>
+          <a href="">
+            <p class="top__box">
+              игрушки
+            </p>
+          </a>
+          <a href="">
+            <p class="top__box">
+              советы
+            </p>
+          </a>
         </div>
-        <div class="select">
-          <img src="img/select.svg" alt="">
-          <p>В избранное</p>
-        </div>
+        <a href="">
+          <div class="select">
+
+            <img src="img/select.svg" alt="">
+            <p>В избранное</p>
+          </div>
+        </a>
 
       </div>
       <h1 class="title">Топ 3 развивающих игрушек</h1>
@@ -87,7 +96,7 @@
       <p class="text">
         Веселье с пользой для малыша!
       </p>
-      <br> 
+      <br>
       <div class="prod">
         <h1 class="title">1. Пистолет</h1>
         <img src="img/img2.jpg" alt="" class="img">
@@ -101,7 +110,7 @@
           для мишени - 10 шт. и устройство для мишени, которое работает как от розетки, так и от батареек - 4 шт. АА.,
           также идущих в комплекте.
         </p>
-        <a href="" class="prod__link" >
+        <a href="" class="prod__link">
           Подробнее о Hover Shot <b>-------></b>
         </a>
       </div>
@@ -109,23 +118,33 @@
         <h1 class="title">2. Желтые сортеры</h1>
         <img src="img/img3.jpg" alt="" class="img">
         <p class="text">
-          Hover Shot - веселая игра для детей. Ваш ребенок наконец отвлечется от компьютера и телефона! В Hover Shot можно играть вдвоем. Пусть дети учатся делиться, укрепляют дружбу и развивают здоровый дух соперничества. Кроме этого, эта игра улучшит остроту зрения, скорость реакции и меткость. Игрушечное оружие отлично ложится в руку, подходит для динамичной игры.
+          Hover Shot - веселая игра для детей. Ваш ребенок наконец отвлечется от компьютера и телефона! В Hover Shot
+          можно играть вдвоем. Пусть дети учатся делиться, укрепляют дружбу и развивают здоровый дух соперничества.
+          Кроме этого, эта игра улучшит остроту зрения, скорость реакции и меткость. Игрушечное оружие отлично ложится в
+          руку, подходит для динамичной игры.
           <br> <br>
-          В Hover Shot можно играть на улице, на свежем воздухе. В комплекте идет два бластера, патроны - 10 шт., шарики для мишени - 10 шт. и устройство для мишени, которое работает как от розетки, так и от батареек - 4 шт. АА., также идущих в комплекте.
+          В Hover Shot можно играть на улице, на свежем воздухе. В комплекте идет два бластера, патроны - 10 шт., шарики
+          для мишени - 10 шт. и устройство для мишени, которое работает как от розетки, так и от батареек - 4 шт. АА.,
+          также идущих в комплекте.
         </p>
-        <a href="" class="prod__link" >
-          Подробнее о Желтых сортерах  <b>-------></b>
+        <a href="" class="prod__link">
+          Подробнее о Желтых сортерах <b>-------></b>
         </a>
       </div>
       <div class="prod">
         <h1 class="title">3. Красные сортеры</h1>
         <img src="img/img4.jpg" alt="" class="img">
         <p class="text">
-          Hover Shot - веселая игра для детей. Ваш ребенок наконец отвлечется от компьютера и телефона! В Hover Shot можно играть вдвоем. Пусть дети учатся делиться, укрепляют дружбу и развивают здоровый дух соперничества. Кроме этого, эта игра улучшит остроту зрения, скорость реакции и меткость. Игрушечное оружие отлично ложится в руку, подходит для динамичной игры.
+          Hover Shot - веселая игра для детей. Ваш ребенок наконец отвлечется от компьютера и телефона! В Hover Shot
+          можно играть вдвоем. Пусть дети учатся делиться, укрепляют дружбу и развивают здоровый дух соперничества.
+          Кроме этого, эта игра улучшит остроту зрения, скорость реакции и меткость. Игрушечное оружие отлично ложится в
+          руку, подходит для динамичной игры.
           <br> <br>
-          В Hover Shot можно играть на улице, на свежем воздухе. В комплекте идет два бластера, патроны - 10 шт., шарики для мишени - 10 шт. и устройство для мишени, которое работает как от розетки, так и от батареек - 4 шт. АА., также идущих в комплекте.
+          В Hover Shot можно играть на улице, на свежем воздухе. В комплекте идет два бластера, патроны - 10 шт., шарики
+          для мишени - 10 шт. и устройство для мишени, которое работает как от розетки, так и от батареек - 4 шт. АА.,
+          также идущих в комплекте.
         </p>
-        <a href="" class="prod__link" >
+        <a href="" class="prod__link">
           Подробнее о Красных сортерах <b>-------></b>
         </a>
       </div>
@@ -133,11 +152,16 @@
         <h1 class="title">4. Бизимяч</h1>
         <img src="img/img5.jpg" alt="" class="img">
         <p class="text">
-          Hover Shot - веселая игра для детей. Ваш ребенок наконец отвлечется от компьютера и телефона! В Hover Shot можно играть вдвоем. Пусть дети учатся делиться, укрепляют дружбу и развивают здоровый дух соперничества. Кроме этого, эта игра улучшит остроту зрения, скорость реакции и меткость. Игрушечное оружие отлично ложится в руку, подходит для динамичной игры.
+          Hover Shot - веселая игра для детей. Ваш ребенок наконец отвлечется от компьютера и телефона! В Hover Shot
+          можно играть вдвоем. Пусть дети учатся делиться, укрепляют дружбу и развивают здоровый дух соперничества.
+          Кроме этого, эта игра улучшит остроту зрения, скорость реакции и меткость. Игрушечное оружие отлично ложится в
+          руку, подходит для динамичной игры.
           <br> <br>
-          В Hover Shot можно играть на улице, на свежем воздухе. В комплекте идет два бластера, патроны - 10 шт., шарики для мишени - 10 шт. и устройство для мишени, которое работает как от розетки, так и от батареек - 4 шт. АА., также идущих в комплекте.
+          В Hover Shot можно играть на улице, на свежем воздухе. В комплекте идет два бластера, патроны - 10 шт., шарики
+          для мишени - 10 шт. и устройство для мишени, которое работает как от розетки, так и от батареек - 4 шт. АА.,
+          также идущих в комплекте.
         </p>
-        <a href="" class="prod__link" >
+        <a href="" class="prod__link">
           Подробнее о Бизимяч <b>-------></b>
         </a>
       </div>
@@ -145,11 +169,16 @@
         <h1 class="title">5.Детское пианино</h1>
         <img src="img/img6.jpg" alt="" class="img">
         <p class="text">
-          Hover Shot - веселая игра для детей. Ваш ребенок наконец отвлечется от компьютера и телефона! В Hover Shot можно играть вдвоем. Пусть дети учатся делиться, укрепляют дружбу и развивают здоровый дух соперничества. Кроме этого, эта игра улучшит остроту зрения, скорость реакции и меткость. Игрушечное оружие отлично ложится в руку, подходит для динамичной игры.
+          Hover Shot - веселая игра для детей. Ваш ребенок наконец отвлечется от компьютера и телефона! В Hover Shot
+          можно играть вдвоем. Пусть дети учатся делиться, укрепляют дружбу и развивают здоровый дух соперничества.
+          Кроме этого, эта игра улучшит остроту зрения, скорость реакции и меткость. Игрушечное оружие отлично ложится в
+          руку, подходит для динамичной игры.
           <br> <br>
-          В Hover Shot можно играть на улице, на свежем воздухе. В комплекте идет два бластера, патроны - 10 шт., шарики для мишени - 10 шт. и устройство для мишени, которое работает как от розетки, так и от батареек - 4 шт. АА., также идущих в комплекте.
+          В Hover Shot можно играть на улице, на свежем воздухе. В комплекте идет два бластера, патроны - 10 шт., шарики
+          для мишени - 10 шт. и устройство для мишени, которое работает как от розетки, так и от батареек - 4 шт. АА.,
+          также идущих в комплекте.
         </p>
-        <a href="" class="prod__link" >
+        <a href="" class="prod__link">
           Подробнее о Детское пианино <b>-------></b>
         </a>
       </div>
@@ -157,11 +186,16 @@
         <h1 class="title">6. Карточки ВеркаКит</h1>
         <img src="img/img7.jpg" alt="" class="img">
         <p class="text">
-          Hover Shot - веселая игра для детей. Ваш ребенок наконец отвлечется от компьютера и телефона! В Hover Shot можно играть вдвоем. Пусть дети учатся делиться, укрепляют дружбу и развивают здоровый дух соперничества. Кроме этого, эта игра улучшит остроту зрения, скорость реакции и меткость. Игрушечное оружие отлично ложится в руку, подходит для динамичной игры.
+          Hover Shot - веселая игра для детей. Ваш ребенок наконец отвлечется от компьютера и телефона! В Hover Shot
+          можно играть вдвоем. Пусть дети учатся делиться, укрепляют дружбу и развивают здоровый дух соперничества.
+          Кроме этого, эта игра улучшит остроту зрения, скорость реакции и меткость. Игрушечное оружие отлично ложится в
+          руку, подходит для динамичной игры.
           <br> <br>
-          В Hover Shot можно играть на улице, на свежем воздухе. В комплекте идет два бластера, патроны - 10 шт., шарики для мишени - 10 шт. и устройство для мишени, которое работает как от розетки, так и от батареек - 4 шт. АА., также идущих в комплекте.
+          В Hover Shot можно играть на улице, на свежем воздухе. В комплекте идет два бластера, патроны - 10 шт., шарики
+          для мишени - 10 шт. и устройство для мишени, которое работает как от розетки, так и от батареек - 4 шт. АА.,
+          также идущих в комплекте.
         </p>
-        <a href="" class="prod__link" >
+        <a href="" class="prod__link">
           Подробнее о Карточки ВеркаКит <b>-------></b>
         </a>
       </div>
@@ -169,12 +203,17 @@
         <h1 class="title">7. Такане мяч</h1>
         <img src="img/img8.jpg" alt="" class="img">
         <p class="text">
-          Hover Shot - веселая игра для детей. Ваш ребенок наконец отвлечется от компьютера и телефона! В Hover Shot можно играть вдвоем. Пусть дети учатся делиться, укрепляют дружбу и развивают здоровый дух соперничества. Кроме этого, эта игра улучшит остроту зрения, скорость реакции и меткость. Игрушечное оружие отлично ложится в руку, подходит для динамичной игры.
+          Hover Shot - веселая игра для детей. Ваш ребенок наконец отвлечется от компьютера и телефона! В Hover Shot
+          можно играть вдвоем. Пусть дети учатся делиться, укрепляют дружбу и развивают здоровый дух соперничества.
+          Кроме этого, эта игра улучшит остроту зрения, скорость реакции и меткость. Игрушечное оружие отлично ложится в
+          руку, подходит для динамичной игры.
           <br> <br>
-          В Hover Shot можно играть на улице, на свежем воздухе. В комплекте идет два бластера, патроны - 10 шт., шарики для мишени - 10 шт. и устройство для мишени, которое работает как от розетки, так и от батареек - 4 шт. АА., также идущих в комплекте.
+          В Hover Shot можно играть на улице, на свежем воздухе. В комплекте идет два бластера, патроны - 10 шт., шарики
+          для мишени - 10 шт. и устройство для мишени, которое работает как от розетки, так и от батареек - 4 шт. АА.,
+          также идущих в комплекте.
         </p>
-        <a href="" class="prod__link" >
-          Подробнее о Такане мяче <b>-------></b>
+        <a href="" class="prod__link">
+          Подробнее о Такане мяче <b>------></b>
         </a>
       </div>
     </div>
@@ -182,65 +221,80 @@
     <br>
 
     <div class="sidebar">
-   <h1 class="sidebar__title">
-    Новые комментарии
-   </h1>
-      <br>
-      <div class="sidebar__news">
-        <img src="img/new1.png" alt="">
-        <p>
-          Сезон клещей
-          продолжается
-          <a href="">Подробнее</a>
-        </p>
-      </div>
-      <div class="sidebar__news">
-        <img src="img/new2.png" alt="">
-        <p>
-          Как худеют
-          знаменитости?
-          <a href="">Подробнее</a>
-        </p>
-      </div>
-      <div class="sidebar__news">
-        <img src="img/new3.png" alt="">
-        <p>
-          Импортные таблетки - плацебо?
-          <a href="">Подробнее</a>
-        </p>
-      </div>
-      <div class="sidebar__news">
-        <img src="img/new4.png" alt="">
-        <p>
-          Алкоголь - вредно или чуть-чуть можно?
-          <a href="">Подробнее</a>
-        </p>
-      </div>
-      <br>
-      <h2>Наши лучшие специалисты</h2>
+      <h1 class="sidebar__title">
+        Новые комментарии
+      </h1>
+      <div class="sidebar__box">
+        <a href="">
+          <div class="sidebar__comment">
+            <div class="user">
+              <img src="img/ava1.png" alt="">
+              <b class="name">Валентин</b>
+              <p class="date">34 минуты назад</p>
+            </div>
+            <p class="sidebar__comment--text">У меня много вопросов было к этому устройству, но потом...</p>
+            <p class="sidebar__comment--bottom">Лучшие дрели для ремонта в домашних условиях</p>
+          </div>
+        </a>
 
-      <div class="sidebar__docs">
-        <img src="img/doc1.png" alt="">
         <a href="">
-          Мария
-          Иванова,
-          эндокринолог
+          <div class="sidebar__comment">
+            <div class="user">
+              <img src="img/ava2.png" alt="">
+              <b class="name">Саша</b>
+              <p class="date">1 час назад</p>
+            </div>
+            <p class="sidebar__comment--text">У меня лично Makita, и у меня нет нареканий, кроме одного момента..</p>
+            <p class="sidebar__comment--bottom">Лучшие дрели для ремонта в домашних условиях</p>
+          </div>
         </a>
       </div>
-      <div class="sidebar__docs">
-        <img src="img/doc2.png" alt="">
+      <br> <br>
+      <h1 class="sidebar__title">
+        Лучшее за неделю
+      </h1>
+      <div class="sidebar__box">
         <a href="">
-          Иван
-          Симонов,
-          Уролог
+          <p class="news">
+            <img src="img/sidebar1.jpg" alt="">
+            Кто поедет на Евровидение?
+          </p>
         </a>
-      </div>
-      <div class="sidebar__docs">
-        <img src="img/doc3.png" alt="">
         <a href="">
-          Снежана
-          Умова,
-          Дерматолог
+          <p class="news">
+            <img src="img/sidebar2.jpg" alt="">
+            Лучшие места для отдыха на майские
+          </p>
+        </a>
+        <a href="">
+          <p class="news">
+            <img src="img/sidebar3.jpg" alt="">
+            Подготовка к дачному сезону
+          </p>
+        </a>
+        <a href="">
+          <p class="news">
+            <img src="img/sidebar4.jpg" alt="">
+            Дом в ипотеку, надоела квартира
+          </p>
+        </a>
+        <a href="">
+          <p class="news">
+            <img src="img/sidebar5.jpg" alt="">
+            Удаленная работа для домохозяек
+          </p>
+        </a>
+        <a href="">
+          <p class="news">
+            <img src="img/sidebar6.jpg" alt="">
+            Куда можно съездить в отпуск?
+          </p>
+        </a>
+        <a href="">
+          <p class="news">
+            <img src="img/sidebar7.jpg" alt="">
+            Лучшие рецепты на завтрак
+          </p>
         </a>
       </div>
     </div>
