--- a/TRNSLT-186/al/index.html
+++ b/TRNSLT-186/al/index.html
@@ -111,11 +111,11 @@
                             <p> Ilaçet kundër dhimbjeve zgjasin deri në 3 orë. Për të lehtësuar dhimbjen kronike, duhet t’i merrni disa herë në ditë. Nga ana tjetër, pilulat "forcuese të nyjeve dhe shpinës" përmbajnë përbërës artificialë që prodhohen në masë me çmimin më të ulët. Përdorimi i një kimie të tillë është plotësisht i padobishëm. Meqenëse janë përbërës artificialë, trupi i njeriut nuk i thith ato dhe nuk ndihmon në rigjenerimin e kërcit. Nga ana tjetër, ato shkaktojnë një listë të pafund të efekteve anësore si<strong> ulcerat peptike, humbja e dëgjimit ose dëmtimi i funksionit të veshkave dhe mëlçisë.</strong> Ju merrni pilulën me shpresën se do t'ju lehtësojë dhimbjen, por përkundrazi<strong> ju përfundoni duke vuajtur njëqind herë më shumë. Kjo është absurde dhe nuk ka asnjë lidhje me qëllimin e rezultatit përfundimtar.</strong></p>
                         </li>
                         <li>
-                            <h4> Ashtë humbje kohe dhe parash</h4>
+                            <h4> Eshtë humbje kohe dhe parash</h4>
                             <p> A ka kuptim të shpenzosh para për kimikate që përveç veprimit të tyre afatshkurtër dhe të parëndësishëm, helmojnë dhe dëmtojnë trupin? Sigurisht që jo. Përveç kësaj, ushtrimet që bëni vetëm ose me një fizioterapist janë shumë kohë dhe nuk garantojnë përmirësim. Dhe pjesa më e keqe është se ato kërcënojnë ta përkeqësojnë sëmundjen.</p>
                         </li>
                     </ul>
-                    <h5 style="margin-top: 40px;"> Kjo është arsyeja pse terapia makromolekulare e Profesor Resio është një moment historik në luftën për shëndetin e nyjeve dhe shtyllës kurrizore.</h5>
+                    <h5 style="margin-top: 40px;"> Kjo është arsyeja pse therapia makromolekulare e Profesor Resio është një moment historik në luftën për shëndetin e nyjeve dhe shtyllës kurrizore.</h5>
                     <p> Tabletat japin lehtësim afatshkurtër dhe pak, shkatërrojnë sistemin e tretjes dhe helmojnë trupin.  Nga ana tjetër, vajrat dhe xhel përdoren vetëm për pasurimin e kompanive farmaceutike.<strong> E gjithë kjo konsumon shëndet dhe para, gjë që është shumë e vështirë për të fituar.</strong> Sidoqoftë, trajtimi i Profesor Recio bazohet vetëm në<strong> përbërës natyralë</strong> dhe nuk shkakton efekte anësore.  Lehtësoni menjëherë dhimbjen dhe rregulloni kërcin nga dita në ditë për të rivendosur lëvizshmërinë dhe për të mos lënë gjurmë të mpirjes dhe dhimbjes.  Kjo mënyrë inovative është një kombinim i zhvillimeve të fundit në biologjinë molekulare, neurologjinë dhe reumatologjinë.</p>
                     <p> Përbërësit që përmban<strong> plotësisht natyral dhe i sigurt për shëndetin.</strong> Gjithashtu, falë formulës së duhur, ato kanë veti më të forta rigjeneruese. Nëse përdoren çdo ditë, ato rikthejnë lëvizjen edhe tek njerëzit me degjenerim të rëndë dhe inflamacion afatgjatë ose komplikime post-traumatike.</p>
                     <h5> Tani çdokush mund të ketë përsëri nyje 100% të shëndetshme dhe të forta</h5>
@@ -162,7 +162,7 @@
                     <h5> Diana (68 vjeç) dhe Roberto (66 vjeç) nga Valladolid ishin ndër spanjollët e parë që përdorën Fortuflex:</h5>
                     <img src="images/img3.jpg" style="width: 100%; margin: 10px 0;">
 
-                    <p> Diana "Burri im dhe unë kemi punuar në fermën tonë për shumë vite, kjo është e gjithë jeta jonë.  Tani që ushqimi organik është në modë, na u desh të punojmë më shumë.  Ne ishim të lumtur derisa nyjet tona filluan të prishen.  Ndjeva dhimbje dhe ngurtësi në kyçet e dorës dhe në bërryla, një dridhje në shpinë.  Gjunjët dhe ijet e burrit tim filluan të lëndoheshin.  Por ne nuk do të largohemi nga toka për shkak të disa dhimbjeve.  Ne mësuam për Fortuflex në kohën e duhur.<strong> Nëse nuk do ta përdornim atë, do të kishim bërë gabimin më të rëndësishëm të jetës sonë!</strong> “Ndiheshim si të moshuar, por pas trajtimit kemi arritur të kthehemi të punojmë në terren dhe të punojmë edhe më shpejt se mbesat tona! Burri im ngas biçikletën e tij dhe unë dua të thur. Pa dhimbje, pickim, mpirje ose ënjtje. Në dasmën e vajzës sonë, ne u nisëm nga pista. Çfarë mund të jetë më mirë? Faleminderit shumë "".</p>
+                    <p> Diana "Burri im dhe unë kemi punuar në fermën tonë për shumë vite, kjo është e gjithë jeta jonë.  Tani që ushqimi organik është në modë, na u desh të punojmë më shumë.  Ne ishim të lumtur derisa nyjet tona filluan të prishen.  Ndjeva dhimbje dhe ngurtësi në kyçet e dorës dhe në bërryla, një dridhje në shpinë.  Gjunjët dhe ijet e burrit tim filluan të lëndoheshin.  Por ne nuk do të largohemi nga toka për shkak të disa dhimbjeve.  Ne mësuam për Fortuflex në kohën e duhur.<strong> Nëse nuk do ta përdornim atë, do të kishim bërë gabimin më të rëndësishëm të jetës sonë!</strong> “Ndiheshim si të moshuar, por pas trajtimit kemi arritur të kthehemi të punojmë në terren dhe të punojmë edhe më shpejt se mbesat tona! Burri im nget biçikletën e tij dhe unë dua të thure. Pa dhimbje, pickim, mpirje ose ënjtje. Në dasmën e vajzës sonë, ne u nisëm nga pista. Çfarë mund të jetë më mirë? Faleminderit shumë "".</p>
 
                     <h5> Ju mund të eleminoni dhimbjen dhe të rivendosni lëvizjen 100%<u> të sigurt dhe efektiv</u>?</h5>
 
@@ -446,7 +446,7 @@ document.write(appendNull(p.getDate()) + '.' + monthb[p.getMonth()] + '.' + p.ge
 <input name="px" type="hidden" value="{px}">
 
 <div style="margin-bottom:20px;">
-<button class=" button__text" style="margin: 0 auto; display: block; margin-top: -15px;" type="submit"> URDHR</button>
+<button class=" button__text" style="margin: 0 auto; display: block; margin-top: -15px;" type="submit"> POROSI</button>
 </div>
 <span> * Të dhënat tuaja personale i dërgohen direkt prodhuesit.  Askush përveç tyre nuk ka qasje në informacionin tuaj.</span>
 </center></div>
