--- a/OFFERS-313/ru/index.html
+++ b/OFFERS-313/ru/index.html
@@ -87,9 +87,11 @@
         </a>
 
       </div>
-      <h1 class="title">Топ 3 развивающих игрушек</h1>
+      <h1 class="title">Топ 7 развивающих игрушек</h1>
       <img src="img/img1.jpg" alt="" class="img">
-      <a href="">
+
+      <div class="img bast"> <img src="img/bestseller.png" alt="" class="absol">
+      </div> <a href="">
         <img src="img/link.svg" alt="" class="link">
       </a>
       <br>
@@ -113,6 +115,9 @@
         <a href="" class="prod__link">
           Подробнее о Hover Shot <b>-------></b>
         </a>
+        <a href="">
+          <img src="img/link-prod.svg" alt="" class="link_prod">
+        </a>
       </div>
       <div class="prod">
         <h1 class="title">2. Желтые сортеры</h1>
@@ -129,6 +134,9 @@
         </p>
         <a href="" class="prod__link">
           Подробнее о Желтых сортерах <b>-------></b>
+        </a>
+        <a href="">
+          <img src="img/link-prod.svg" alt="" class="link_prod">
         </a>
       </div>
       <div class="prod">
@@ -147,6 +155,9 @@
         <a href="" class="prod__link">
           Подробнее о Красных сортерах <b>-------></b>
         </a>
+        <a href="">
+          <img src="img/link-prod.svg" alt="" class="link_prod">
+        </a>
       </div>
       <div class="prod">
         <h1 class="title">4. Бизимяч</h1>
@@ -163,6 +174,9 @@
         </p>
         <a href="" class="prod__link">
           Подробнее о Бизимяч <b>-------></b>
+        </a>
+        <a href="">
+          <img src="img/link-prod.svg" alt="" class="link_prod">
         </a>
       </div>
       <div class="prod">
@@ -181,6 +195,9 @@
         <a href="" class="prod__link">
           Подробнее о Детское пианино <b>-------></b>
         </a>
+        <a href="">
+          <img src="img/link-prod.svg" alt="" class="link_prod">
+        </a>
       </div>
       <div class="prod">
         <h1 class="title">6. Карточки ВеркаКит</h1>
@@ -198,6 +215,9 @@
         <a href="" class="prod__link">
           Подробнее о Карточки ВеркаКит <b>-------></b>
         </a>
+        <a href="">
+          <img src="img/link-prod.svg" alt="" class="link_prod">
+        </a>
       </div>
       <div class="prod">
         <h1 class="title">7. Такане мяч</h1>
@@ -214,6 +234,9 @@
         </p>
         <a href="" class="prod__link">
           Подробнее о Такане мяче <b>------></b>
+        </a>
+        <a href="">
+          <img src="img/link-prod.svg" alt="" class="link_prod">
         </a>
       </div>
     </div>
