--- a/TRNSLT-195/gr/index.html
+++ b/TRNSLT-195/gr/index.html
@@ -84,13 +84,13 @@
                             </script><span class="article__time"></span><span class="article__author"> Πέτρος Κωνσταντίνου </span>
                         </div>
                         <h3 class="article__title"><strong> Η ηλικία δεν είναι πια εμπόδιο για εσάς! Ο 109 χρόνος  ρευματολόγος μοιράζεται το μυστικό για τη μακροζωία και τις υγιείς αρθρώσεις του.</strong></h3>
-                        <div class="article__text js-mediator-article"><span class="myText2"> Πορτογάλος ρευματολόγος, Miguel Rabellino, αποσύρθηκε απο την δουλειά στην ηλικία των 70 ετών, αν και ήταν ακόμη νέος στο μυαλό και το σώμα.<b>  Αποσύρθηκε πριν από 39 χρόνια και οι αξιωματούχοι κοινωνικής ασφάλισης τον μισούν</b> Τώρα ο ακαδημαϊκός είναι 109 ετών, και ζει την ίδια ενεργή ζωή σαν να'ναι 60 ετών!</span>
-                            <p> Ο ρευματολόγος Rabellino διαβεβαιώνει ότι <b> το μυστικό της μακροζωίας βασίζεται σε υγιείς αρθρώσεις και την σπονδυλική στήλη.</b> Η κίνηση είναι ένα από τα μεγαλύτερα δώρα της φύσης, που δίνεται με αγάπη στον άνθρωπο. Εάν έχετε έναν ενεργό τρόπο ζωής, μπορείτε να ζήσετε έως και 120 χρόνια και ακόμη περισσότερο και να αισθάνεστε  εντελώς υγιείς. Ο ρευματολόγος επιβεβαίωσε πλήρως αυτήν τη δήλωση.</p>
-                            <p> Ο δημοσιογράφος μας κατάφερε να πάρει συνέντευξη από τον Δρ. Rabellino, ο οποίος μας είπε το μυστικό του για υγιείς αρθρώσεις για πολλά  χρόνια.</p>
+                        <div class="article__text js-mediator-article"><span class="myText2"> Έλληνας ρευματολόγος, Μάριος Σαρλής, αποσύρθηκε απο την δουλειά στην ηλικία των 70 ετών, αν και ήταν ακόμη νέος στο μυαλό και το σώμα.<b>  Αποσύρθηκε πριν από 39 χρόνια και οι αξιωματούχοι κοινωνικής ασφάλισης τον μισούν</b> Τώρα ο ακαδημαϊκός είναι 109 ετών, και ζει την ίδια ενεργή ζωή σαν να'ναι 60 ετών!</span>
+                            <p> Ο ρευματολόγος Σαρλής διαβεβαιώνει ότι <b> το μυστικό της μακροζωίας βασίζεται σε υγιείς αρθρώσεις και την σπονδυλική στήλη.</b> Η κίνηση είναι ένα από τα μεγαλύτερα δώρα της φύσης, που δίνεται με αγάπη στον άνθρωπο. Εάν έχετε έναν ενεργό τρόπο ζωής, μπορείτε να ζήσετε έως και 120 χρόνια και ακόμη περισσότερο και να αισθάνεστε  εντελώς υγιείς. Ο ρευματολόγος επιβεβαίωσε πλήρως αυτήν τη δήλωση.</p>
+                            <p> Ο δημοσιογράφος μας κατάφερε να πάρει συνέντευξη από τον καθηγητή, ο οποίος μας είπε το μυστικό του για υγιείς αρθρώσεις για πολλά  χρόνια.</p>
                             <div class="wrrapper"><img align="left" class="gelat_Bb6MhOHv" src="img/image2.jpg" width="200">
-                                <p> Στα 109 του χρόνια, ο Δρ.Rabellino πήρε εύσημα από τον πρωθυπουργό. Φωτογραφία του χώρου εργασίας του Δρ. Rabellino.</p>
+                                <p> Στα 109 του χρόνια, ο Μάριος Σαρλής πήρε εύσημα από τον πρωθυπουργό. Φωτογραφία του χώρου εργασίας του καθηγητή .</p>
                             </div>
-                            <p> - Κύριε Rabellino, έχετε διαβεβαιώσει πολλές φορές ότι οι υγιείς αρθρώσεις αποτελούν τη βάση της υγείας. Γιατί;</p>
+                            <p> - Κύριε Σαρλή, έχετε διαβεβαιώσει πολλές φορές ότι οι υγιείς αρθρώσεις αποτελούν τη βάση της υγείας. Γιατί;</p>
                             <p>  - Πολύ απλά. Ακόμα και οι σοφοί στην αρχαιότητα έλεγαν ότι<b> όσο η σπονδυλική στήλη είναι υγιής, θα είναι υγιής και ο άνθρωπος. </b>  Δυστυχώς, ο σύγχρονος άνθρωπος υποβάλλεται καθημερινά σε διάφορες καταστάσεις που επηρεάζουν άσχημα την υγεία του μυοσκελετικού συστήματος: μολυσμένος αέρας, καθιστός  τρόπος ζωής, υπερβολική άσκηση, ανθυγιεινή διατροφή, υπερβολικό βάρος και έλλειψη βιταμινών είναι μόνο μερικοί από τους παράγοντες που μπορεί να οδηγήσουν σε προβλήματα με τη σπονδυλική στήλη και τις αρθρώσεις.</p>
                             <p> Η σπονδυλική στήλη είναι στήριξη των ανθρώπων και οι αρθρώσεις είναι ένα είδος μηχανισμού για την κίνηση του σώματος. Γι 'αυτό η σπονδυλική στήλη και οι αρθρώσεις ονομάζονται μυοσκελετικό σύστημα. Δυστυχώς, καθ 'όλη τη διάρκεια της ζωής, οι άνθρωποι δίνουν λίγη προσοχή στην κατάσταση της σπονδυλικής στήλης και των αρθρώσεων τους, η οποία οδηγεί σε διάφορα προβλήματα και ασθένειες, και έως την ηλικία των 50 ετών, πολλοί βιώνουν συνεχή πόνο στις αρθρώσεις και τη σπονδυλική στήλη.</p>
                             <p> Το ανθρώπινο σώμα γερνά. Εάν είστε προσεκτικοί και φροντίζετε καλά τις αρθρώσεις σας, θα έχετε την ευκαιρία να ζήσετε τουλάχιστον 20 χρόνια χωρίς να υποφέρετε από πόνο και το σώμα σας θα λειτουργεί τέλεια. Με άλλα λόγια, οι υγιείς αρθρώσεις μπορούν να παρατείνουν τη ζωή και την υγεία σας. Και αυτό δεν είναι απλώς μια θεωρία. Έχω συστήσει τη μέθοδο μου στους ασθενείς μου και την εφαρμόζω προσωπικά στην πράξη. Όλοι όσοι ακολουθούν τις συμβουλές μου ζουν καλύτερα από πολλούς ανθρώπους της ηλικίας τους.</p>
@@ -100,7 +100,7 @@
                             <ul class="myList">
                                 <li><b> Ηλικία.</b> Με την ηλικία, η παραγωγή αρθρικού υγρού μειώνεται - εμφανίζεται πρόβλημα  στις αρθρώσεις, οι κινήσεις μπορούν να προκαλέσουν πόνο. Αυτό συμβαίνει επειδή ο χόνδρος, πλησιάζοντας ο ένας στον άλλο,τρίβεται, γίνεται εξάλειψη, έτσι εμφανίζεται μικροτραύμα.</li>
                                 <li><b> Φυσική δραστηριότητα, αθλητισμός.</b> Η κύρια απειλή με τις τακτικές αθλητικές δραστηριότητες είναι η χρόνια υπέρταση του μυοσκελετικού συστήματος. Μπορείτε επίσης να προκαλέσετε βλάβη στις αρθρώσεις σας, εάν επιλέξετε λάθος παπούτσια, λάθος προθέρμανση του σώματος  πριν τις ασκήσεις, εαν αυξήσετε δραματικά το πρόγραμμα βαρών της γυμναστικής ή λανθασμένη διατροφή . Ο κατάλογος των απειλών είναι αρκετά εκτεταμένος, οπότε η εύρεση ενός αθλητή με υγιείς αρθρώσεις είναι μεγάλη επιτυχία.</li>
-                                <li><b> Αρθρίτιδα.</b> Η αρθρίτιδα εμφανίζεται ως αποτέλεσμα λοιμώξεων, τραύματος, μεταβολικών διαταραχών. Συμπτώματα αρθρίτιδας: αυξανόμενος πόνος στις αρθρώσεις λόγω του γεγονότος ότι οι αρθρικές επιφάνειες και ο χόνδρος τρίζονται μεταξύ τους. Η  παραμέληση της φλεγμονώδη αρθρίτιδας, θα γίνει χρόνια πάθηση που προκαλεί  - αρθροπάθεια.</li>
+                                <li><b> Αρθρίτιδα.</b> Η αρθρίτιδα εμφανίζεται ως αποτέλεσμα λοιμώξεων, τραύματος, μεταβολικών διαταραχών. Συμπτώματα αρθρίτιδας: αυξανόμενος πόνος στις αρθρώσεις λόγω του γεγονότος ότι οι αρθρικές επιφάνειες και ο χόνδρος τρίβονται μεταξύ τους. Η  παραμέληση της φλεγμονώδη αρθρίτιδας, θα γίνει χρόνια πάθηση που προκαλεί  - αρθροπάθεια.</li>
                                 <li><b> Αρθροπάθεια.</b> Η αρθροπάθεια είναι μια παραμόρφωση της άρθρωσης που μειώνει την ποιότητα κίνησης λόγω σοβαρής μεταβολικής διαταραχής στην άρθρωση. Εμφανίζεται με χρόνια υπέρταση του αρθρικού χόνδρου, καθώς και με την εξέλιξη της αρθρίτιδας.</li>
                             </ul>
                             <p> Αυτές οι φωτογραφίες δείχνουν εκφυλιστικές αλλαγές στις αρθρώσεις και πόσο μπορούν να επηρεάσουν την ποιότητα ζωής.</p>
@@ -109,7 +109,7 @@
                                     <center><img src="img/image3.jpg"></center><br>
                                 </div>
                             </center>
-                            <p style="max-width: 550px;margin: 0 auto;"><i class="myText1"> Άνδρας 53 ετών, γοναρθρώσεις της άρθρωσης του γόνατος. Μείωση του πάχους του χόνδρου ιστού, η οποία οδηγεί σε τραύμα στις δομές των οστών και αυτό οδηγεί σε αναπηρία σε ΟΛΕΣ ΤΙΣ ΠΕΡΙΠΤΩΣΕΙΣ, και τέτοιοι ασθενείς χρειάζονται ιδιαίτερη προσοχή.</i></p>
+                            <p style="max-width: 550px;margin: 0 auto;"><i class="myText1"> Άνδρας 53 ετών, άρθρωση του γόνατος. Μείωση του πάχους του χόνδρου ιστού, η οποία οδηγεί σε τραύμα στις δομές των οστών και αυτό οδηγεί σε αναπηρία σε ΟΛΕΣ ΤΙΣ ΠΕΡΙΠΤΩΣΕΙΣ, και τέτοιοι ασθενείς χρειάζονται ιδιαίτερη προσοχή.</i></p>
                             <center>
                                 <div style="margin-bottom: 10px;">
                                     <center><img src="img/image6.jpg"></center>
@@ -126,10 +126,10 @@
                                 <li> Δυσκολία στην κινητικότητα τις πρωινές ώρες  </li>
                                 <li> Ακαμψία των αρθρώσεων μετά τον ύπνο ή την παρατεταμένη ανάπαυση</li>
                                 <li> Κρίσιμο, λείανση και κλικ, συνοδευόμενος από έναν θαμπό ήχο</li>
-                                <li> Πόνος κατά την κίνηση και την άσκηση</li>
+                                <li> Πόνος κατά την παραμικρή κίνηση ή κατά την φυσική άσκηση </li>
                             </ul>
-                            <p> Ανεξάρτητα από το εάν έχετε ένα από αυτά τα συμπτώματα, μετά από τα 40 πρέπει να φροντίσετε την υγεία των αρθρώσεων σας, ώστε να απολαύσετε μια ζωή χωρίς πόνο και για τις επόμενες δεκαετίες.</p>
-                            <p> Οι ανθρώπινες αρθρώσεις κάνουν εξαιρετική δουλειά σε όλη τη ζωή ενός ανθρώπου.Το περπάτημα, το τζόκινγκ, ο αθλητισμός και η σωματική δραστηριότητα εκθέτουν τις αρθρώσεις σε φθορά, κάτι που με την πάροδο του χρόνου περιορίζει την δραστηριότητα. Για να λειτουργούν σωστά οι αρθρώσεις καθ 'όλη τη διάρκεια της ζωής, πρέπει να ακολουθείται υγιεινή διατροφή για την ενίσχυση.</p>
+                            <p> Ανεξάρτητα από το εάν έχετε ένα από αυτά τα συμπτώματα, μετά από τα 40 πρέπει να φροντίσετε την υγεία των αρθρωσεών σας, ώστε να απολαύσετε μια ζωή χωρίς πόνο και για τις επόμενες δεκαετίες.</p>
+                            <p> Οι αρθρώσεις κάνουν εξαιρετική δουλειά καθ'όλη τη διάρκεια της ζωή μας.Το περπάτημα, το τζόκινγκ, ο αθλητισμός και η σωματική δραστηριότητα εκθέτουν τις αρθρώσεις σε φθορά, κάτι που με την πάροδο του χρόνου περιορίζει την δραστηριότητά μας . Για να λειτουργούν σωστά οι αρθρώσεις καθ 'όλη τη διάρκεια της ζωής, πρέπει να ακολουθείται υγιεινή διατροφή για την ενίσχυσή τους .</p>
                             <p> - Πείτε μας το μυστικό σας για την υγεία των αρθρώσεων.</p>
                             <p> Μέχρι πρόσφατα, η διαδικασία της θεραπείας των αρθρώσεων μου έπαιρνε αρκετούς μήνες. Μάζευα φαρμακευτικά βότανα, τα έψαχνα στην αγορά ή στο Διαδίκτυο και έφτιαχνα βάμματα και συμπιέσεις από αυτά. Τώρα δεν χρειάζεται πλέον να το κάνω αυτό, καθώς οι συνάδελφοί μου από το Ινστιτούτο Τραυματολογίας και Ορθοπαιδικής έχουν βρει ένα καλό και φθηνό προϊόν για τη θεραπεία και την υγεία των αρθρώσεων: FortuFlex. Στην πραγματικότητα, αυτό το προϊόν σταματά την ανάπτυξη εκφυλιστικών αλλαγών στο μυοσκελετικό σύστημα, αποκαθιστά και ανανεώνει τις αρθρώσεις και τη σπονδυλική στήλη. Επομένως, ταιριάζει απόλυτα για τους σκοπούς μας.</p>
                             <center><a href="{offer}" target="_blank"><img src="img/product.png"></a><i class="myText1"> Το FortuFlex με τακτική χρήση αυξάνει την κυκλοφορία του αίματος και τη διατροφή της άρθρωσης, αποκαθιστά τον χόνδρο και το προστατεύει από φθορά.</i></center><br>
@@ -164,8 +164,8 @@
                                 <li> Ο χρόνος παράδοσης 1-3 ημέρες, θα λάβετε το FortuFlex με courier</li>
                             </ul>
                             <p> Για τη διατήρηση υγιών αρθρώσεων και σπονδυλικής στήλης, προτείνω να επαναλαμβάνετε τη διαδικασία κάθε 1-2 χρόνια. Ειδικά στην περίπτωση των ηλικιωμένων. Βοηθά στην ενίσχυση των αρθρώσεων και καθυστερεί τα σημάδια γήρανσης. Οι υγιείς αρθρώσεις είναι το κλειδί για την υγεία.</p>
-                            <p>  - Κύριε Rabellino, σας ευχαριστώ που μας αποκαλύψατε τόσο σημαντικές λεπτομέρειες σε αυτήν τη συνέντευξη.</p>
-                            <p> Πίσω από τα παρασκήνια, ο κ. Rabellino μας εξομολογήθηκε ότι αγαπά την κηπουρική και βοηθά τα παιδιά του, τα οποία έχουν πλέον φτάσει στην ηλικία συνταξιοδότησης. Η σύζυγός του είναι 99 ετών. Και οι δύο υποβάλλονται σε θεραπείες για την ενίσχυση των αρθρώσεων και τη διατήρηση ενός ενεργού τρόπου ζωής. Ο καθηγητής πιστεύει ότι αυτό είναι το μόνο πράγμα που τους βοηθά.</p>
+                            <p>  - Κύριε Σαρλή, σας ευχαριστώ που μας αποκαλύψατε τόσο σημαντικές λεπτομέρειες σε αυτήν τη συνέντευξη.</p>
+                            <p> Πίσω από τα παρασκήνια, ο καθηγητής μας εξομολογήθηκε ότι αγαπά την κηπουρική και βοηθά τα παιδιά του, τα οποία είναι πλέον συνταξιούχοι . Η σύζυγός του είναι 99 ετών. Και οι δύο υποβάλλονται σε θεραπείες για την ενίσχυση των αρθρώσεων και τη διατήρηση ενός ενεργού τρόπου ζωής. Ο Μάριος Σαρλής πιστεύει ότι αυτό είναι το μόνο πράγμα που τους βοηθά.</p>
                             <center>
                                 <p class="rub-ramka" style><span class="myh4"> ΑΝΑΚΟΙΝΩΣΗ<script type="text/javascript">
                                             dtime_nums(-3, true)
@@ -238,7 +238,7 @@
                                                 dtime_nums(-3, true);
                                             </script>
                                         </span></p>
-                                    <p> Είμαι 61 ετών. Κάνω θεραπείες για τις αρθρώσεις μου εδώ και 5 χρόνια. Τους τελευταίους δύο μήνες χρησιμοποιώ  την FortuFlex. Χάρη σε αυτήν, κεντώ και ζωγραφίζω, έχω ήδη αρχίσει να περπατάω για μεγάλες αποστάσεις. Είμαι πολύ ικανοποιημένη. </p>
+                                    <p> Είμαι 61 ετών. Κάνω θεραπείες για τις αρθρώσεις μου εδώ και 5 χρόνια. Τους τελευταίους δύο μήνες χρησιμοποιώ  την FortuFlex. Χάρη σε αυτήν, κεντώ και ζωγραφίζω, έχω ήδη αρχίσει να περπατάω για πολύ ώρα διανύοντας μεγάλες αποστάσεις. Είμαι πολύ ικανοποιημένη. </p>
                                 </div>
                                 <div class="comment-user">
                                     <p class="user-name"><img src="img/user_no_foto.jpg"> Σάββας <span style="margin-left: 10px;">
@@ -294,7 +294,7 @@
                                                 dtime_nums(-1, true);
                                             </script>
                                         </span></p>
-                                    <p> Τα χέρια, τα δάχτυλα και τα γόνατά μου πονάνε. Γνωρίζω ότι τα χάπια είναι επιβλαβή, και τα παυσίπονα προκαλούν εθισμό και ανακούφιση μικρής διάρκειας . Διάβασα ένα άρθρο για αυτήν την κρέμα, το μελετούσα για μεγάλο χρονικό διάστημα. Αποφάσισα να την δοκιμάσω, καθώς η σύνθεση είναι απολύτως φυσική. Μετά από αρκετές ημέρες εφαρμογής, οι πόνοι εξαφανίστηκαν εντελώς και μετά από ένα μήνα ήμουν σε θέση να παίζω και να περπατήσω με την εγγονή μου. Σας ευχαριστώ πάρα πολύ!</p>
+                                    <p> Τα χέρια, τα δάχτυλα και τα γόνατά μου πονάνε. Γνωρίζω ότι τα χάπια είναι επιβλαβή, και τα παυσίπονα προκαλούν εθισμό και ανακούφιση μικρής διάρκειας . Διάβασα ένα άρθρο για αυτήν την κρέμα, το μελετούσα για μεγάλο χρονικό διάστημα. Αποφάσισα να την δοκιμάσω, καθώς η σύνθεση είναι απολύτως φυσική. Μετά από αρκετές ημέρες εφαρμογής, οι πόνοι εξαφανίστηκαν εντελώς και μετά από ένα μήνα ήμουν σε θέση να παίζω και να τρέχω με την εγγονή μου. Σας ευχαριστώ πάρα πολύ!</p>
                                 </div><br>
                                 <center><a class="of-site" href="{offer}" target="_blank"> Παραγγείλετε το  FortuFlex με έκπτωση 50%.</a></center>
                             </div><br><br>
